--- a/ShopPro.Infraestructure/ShopPro.Infraestructure.csproj
+++ b/ShopPro.Infraestructure/ShopPro.Infraestructure.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Notification\Model\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
   </ItemGroup>
 
 </Project>
