--- a/ShopPro.Tables.Persistence/ShopPro.Tables.Persistence.csproj
+++ b/ShopPro.Tables.Persistence/ShopPro.Tables.Persistence.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShopPro.Categories.Application\ShopPro.Tables.Application.csproj" />
+    <ProjectReference Include="..\ShopPro.Categories.Domain\ShopPro.Tables.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
