--- a/ShopPro.Categories.Application/ShopPro.Tables.Application.csproj
+++ b/ShopPro.Categories.Application/ShopPro.Tables.Application.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShopPro.Infraestructure\ShopPro.Infraestructure.csproj" />
+  </ItemGroup>
+
 </Project>
