--- a/ShopPro.Tables.Api/appsettings.Development.json
+++ b/ShopPro.Tables.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ShopContext": "Server=DESKTOP-RT13AJJ\\MSSQLSERVER1;Database=Shop;User Id=sa;Password=123456789;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
