--- a/ShopPro.Tables.Api/appsettings.json
+++ b/ShopPro.Tables.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ShopContext": "Server=DESKTOP-RT13AJJ\\MSSQLSERVER1;Database=Shop;User Id=sa;Password=123456789;TrustServerCertificate=True;"
+  }
 }
