Trabajando con Api Act.

--- a/ShopPro.Catalog.Persistence/ShopPro.Catalog.Persistence.csproj
+++ b/ShopPro.Catalog.Persistence/ShopPro.Catalog.Persistence.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ShopPro.Categories.Domain\ShopPro.Catalog.Domain.csproj" />
+    <ProjectReference Include="..\ShopPro.Catalog.Domain\ShopPro.Catalog.Domain.csproj" />
   </ItemGroup>
 
 </Project>
