--- a/ShopPro.Catalog.Api/ShopPro.Catalog.Api.csproj
+++ b/ShopPro.Catalog.Api/ShopPro.Catalog.Api.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ShopPro.Tables.IOC\ShopPro.Catalog.IOC.csproj" />
+    <ProjectReference Include="..\ShopPro.Catalog.IOC\ShopPro.Catalog.IOC.csproj" />
   </ItemGroup>
 
 </Project>
